--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,13 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 #theme: minima
+paginate: 4
+paginate_path: "/blog/page:num/"
 sass:
   style: compact
 plugins:
   - jekyll-feed
+  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
