--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ markdown: kramdown
 excerpt_separator: <!--more-->
 paginate: 4
 # paginate_path: "/blog/page:num/"
+cloudinary:
+  cloud_name: dznhn4oax
 sass:
   style: compact
 plugins:
