linked nav menu to pages. created default layout. adjusted about text.

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,8 +1,11 @@
 ---
 navigation:
 - title: Home
+  url: /index
   weight: 1
 - title: About
+  url: /about
   weight: 2
 - title: Blog
+  blog: /blog
   weight: 3
