--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
-cloudinary_url: https://res.cloudinary.com/dznhn4oax/image/upload
+cloudinary_url: "https://res.cloudinary.com/dznhn4oax/image/upload/"
 
 collections:
   authors:
