--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: suzytradealerts@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A blog from two traders at Option Legacy. Follow along with us as we cover
   mindset, trader psychology, risk, and option trading strategies all
-  covered here.
+  covered here. (For educational purposes only)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
