changed about page

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ cloudinary_url: "https://res.cloudinary.com/dznhn4oax/image/upload"
 
 collections:
   authors:
-    output: true
+    output: false
 
 # Build settings
 markdown: kramdown
@@ -40,7 +40,7 @@ sass:
 algolia:
   application_id: F4DPX38ZHV
   index_name: prod_BLOG
-  search_only_api_key: aa944f46d121fb6aed356ce69cfbce28 
+  search_only_api_key: aa944f46d121fb6aed356ce69cfbce28
 plugins:
   - jekyll-feed
   - jekyll-menus
