--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ plugins:
   - jekyll-feed
   - jekyll-menus
   - jekyll-paginate
+  - jekyll-youtube
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
