changed about text.

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Legacy Traders Blog
 email: suzytradealerts@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A blog from two traders at OptionLegacy.com. Follow along with us as we cover
+  From the traders at OptionLegacy.com. Follow along with us as we cover
   mindset, trader psychology, risk, and option trading strategies all
   covered here. (For educational purposes only)
 baseurl: "" # the subpath of your site, e.g. /blog
