--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Legacy Traders Blog
+title: OptionLegacy.com Blog
 email: suzytradealerts@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   From the traders at OptionLegacy.com. Follow along with us as we cover
